init note service